# HyMem

./: .gitignore  README.md  pyproject.toml
.serena/: project.yml
hymem/: __init__.py  api.py  bootstrap.py  config.py  doctor.py  honcho_server.py  improv.md  server.py  session.py
hymem.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
hymem/contrib/: openai_client.py  openai_embedding_client.py
hymem/core/: db.py  markdown_io.py  schema.sql
hymem/dreaming/: canonicalize.py  chunks.py  embeddings.py  episodes.py  inference.py  mentions.py  phase1.py  phase2.py  phase3.py  procedures.py  retention.py  runner.py  scheduler.py  summary.py
hymem/extraction/: embeddings.py  llm.py  markers.py  triples.py
hymem/extraction/prompts/: __init__.py
hymem/honcho/: __init__.py  adapters.py  app.py  models.py
hymem/query/: augment.py  conflicts.py  entities.py  predicate_routing.py
tests/: conftest.py  test_augment.py  test_canonicalize.py  test_chunks.py  test_concurrency.py  test_dream_runs.py  test_dream_scheduler.py  test_dreaming.py  test_embeddings.py  test_extraction.py  test_graph_semantic.py  test_honcho_contract.py  test_honcho_server.py  test_integration.py  test_markdown_io.py  test_mcp_server.py  test_phase3_perf.py  test_retract.py
